Add DB image and repository impl, Add implementation for the fleet endpoints
